# dspy-crewai-mem0

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  config.py  reset_session.py  utils.py
app/crew/: consistency.py  shared_brain.py  tasks.py
app/pipelines/: __init__.py  memory_pipeline.py  no_memory_pipeline.py  signatures.py
app/telemetry/: __init__.py  control.py  live_dashboard.py  live_telemetry.py  run_dashboard.py  usage_meter.py
app/workloads/: __init__.py  crew_race.py  heavy_workload.py
